# grant-applications-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.ps1  start.sh
.streamlit/: config.toml
functions/: column_detection.py  extract_needs.py  extract_usage.py  necessity_index.py  shortlist.py
ner-training/: begin-training.zsh  convert_to_spacy.py  debug_labeled_data.py  merge_json.py  predict.py  prepare_data.py  readme.md  remove_non_context_labels.py  split_data.py  testing-model.ipynb  transformer.cfg
ner-training/converted_training_data/: dev.json  dev.spacy  train.json
ner-training/original-training-data/: 03-13-labeled-data.json  03-15-labeled-fixed.json  03-15-labeled.json
ner-training/spacy_venv/: pyvenv.cfg
notebooks/: Untitled.ipynb  app_pipeline.ipynb  data-exploration.ipynb  emotion_classification.ipynb  heartfelt_model_training.ipynb  labeled-ner-data-debugging.ipynb  ner-training.ipynb  training-code.md
notebooks/custom-ner-model/: meta.json
notebooks/custom-ner-model/ner/: moves
src/: column_detection.py  extract_usage.py  logger.py  necessity_index.py  pr_opps.py  preprocess_text.py  prompts.py  px_charts.py  shortlist.py  twinkl_originals.py
src/models/: heartfelt_pipeline.joblib  topicModeling_contentRequests.py  topic_modeling_pipeline.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
