[project]
name = ""
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "altair",
    "bertopic",
    "contractions",
    "joblib",
    "jupyterlab>=4.4.2",
    "langchain-core",
    "langchain-openai",
    "nltk",
    "numpy",
    "openai",
    "pandas",
    "python-dotenv",
    "scikit-learn",
    "sentence-transformers",
    "spacy",
    "streamlit",
    "streamlit-extras",
    "torch",
    "tqdm",
    "watchdog>=6.0.0",
]

[tool.uv]
package = false
