[project]
name = ""
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "altair",
    "bertopic",
    "contractions",
    "joblib",
    "jupyterlab>=4.4.2",
    "langchain-core",
    "langchain-openai",
    "numpy",
    "openai",
    "pandas",
    "pip>=25.1.1",
    "python-dotenv",
    "scikit-learn",
    "sentence-transformers",
    "spacy",
    "streamlit",
    "streamlit-extras",
    "torch",
    "tqdm",
    "watchdog>=6.0.0",
]

[tool.uv]
package = false
