[project]
name = ""
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "bertopic",
    "contractions",
    "en-core-web-sm",
    "joblib",
    "jupyterlab>=4.4.2",
    "langchain-core",
    "langchain-openai",
    "numpy",
    "openai",
    "pandas",
    "pip>=25.1.1",
    "plotly>=6.1.0",
    "python-dotenv",
    "scikit-learn",
    "sentence-transformers",
    "spacy",
    "streamlit",
    "streamlit-extras",
    "torch",
    "tqdm",
    "watchdog>=6.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
